# folivora

./: .gitignore  .gitmodules  LICENSE.md  README.md  folivora.lib  fp-lib-table  main.kicad_pcb  main.sch  main.sch-bak  node.md  parts.md  zip-pcb-files.sh
.circleci/: config.yml
3d/: .gitignore  Makefile  ball_const.scad  ball_cover.scad  bearing_base.scad  bearing_cover.scad  build.sh  clean.sh  start_watch.py  top.scad
docker/: Dockerfile
folivora-models/: .gitignore  README.md  project.clj
folivora.pretty/: ADNS-9800.kicad_mod  BlackPill.kicad_mod  Film_Switch_4X4X0.8MM.kicad_mod  IDC-Header_2x07_P1.27mm_Vertical.kicad_mod  Key_WirePad.kicad_mod  Micro_hole.kicad_mod  OLED.kicad_mod  RJ45_rev.kicad_mod  SK6812MINI_rev.kicad_mod  SMINI_5DE.kicad_mod  logo.kicad_mod
inventor/: .gitignore  Folivora.ipj  Part6.ipt  ThumbPlate.ipt  ball.ipt  ballcover.ipt  baseframe.ipt  baseframe_left.ipt  bearing.ipt  bearingcover.ipt  cube.ipt  folivora.iam  frame.ipt  frame_front.ipt  keel.ipt  keyL.ipt  keyL_extended.ipt  keyL_large.ipt  keyL_medium.ipt  keyL_small.ipt  keyplate2.ipt  keyplate3.ipt  keyplate4.ipt  keyplate5.ipt  keyplate_index.ipt  lockfile.lck  palmrest-plate.ipt  palmrest.ipt  palmrest_MIR.ipt  palmrest_left.ipt  thumbkey_L.ipt  trackball-base.dwg  trackball-base.dxf  trackball-base.ipt  trackball-cover.ipt  trackball-shaft.ipt  trackball-spacer.ipt  trackballL.ipt  trackball_l.ipt
model/: .ocamlformat  Makefile  dune-project  folivora.opam  format.sh
model/lib/: dune  key.ml  key_unit.ml  matrix.ml  pad.ml  patch.ml
pcb/: folivora.lib  lib.lib
(+82 files in other folders)
