(lang dune 2.6)
(name folivora)
(version 0.0.0)
(generate_opam_files true)

(source (github namachan10777/folivora))
(license BSL-1.0)
(authors "Masaki Nakano<namachan10777@gmail.com>")
(maintainers "Masaki Nakano<namachan10777@gmail.com>")
(package
  (name folivora)
  (synopsis "3d model")
  (description "")
  (depends
    (dune (> 2.0))
    (core (>= 0.14.0))
    (scad_ml (> 0.0))))
